--- a/MybatisDebug/bin/mysql.properties
+++ b/MybatisDebug/bin/mysql.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/rap_db
-jdbc.username=root
+jdbc.driverClassName=com.mysql.jdbc.Driver  
+jdbc.url=jdbc:mysql://localhost:3306/rap_db  
+jdbc.username=root  
 jdbc.password=Aa123456
