--- a/tomcat8.xDebug/.settings/org.eclipse.core.resources.prefs
+++ b/tomcat8.xDebug/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//webapps/test/WEB-INF/taglib/janchou-taglib.tld=UTF-8
+encoding//webapps/test/jsp/autoinclude/index.jsp=UTF-8
 encoding//webapps/test/jsp/index.jsp=UTF-8
