--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Quartz2.2.3Debug/bin
 /ConnectionPoolDataSource/druid-1.0.26Debug/bin
 /ConnectionPoolDataSource/c3p0-0.9.5.2Debug/bin
+/springFrameworkDebug/WebRoot/WEB-INF/classes
