--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,4 @@
 /ConnectionPoolDataSource/c3p0-0.9.5.2Debug/bin
 /HibernateValidator5.4.1Debug/bin
 /springFrameworkDebug/WebRoot/WEB-INF/classes
-remotes/javacodedemo/master
+/freemarkerDebug/bin
