--- a/springFrameworkDebug/webDemoSrc/configures/global.properties
+++ b/springFrameworkDebug/webDemoSrc/configures/global.properties
@@ -1,3 +1,5 @@
-SPRING_PROJECT_ENVIRONMENT=DEV
+SPRING_PROJECT_ENVIRONMENT=dev
+#SPRING_PROJECT_ENVIRONMENT=test
+#SPRING_PROJECT_ENVIRONMENT=prod
 SPRING_PROJECT_DEBUG=true
 property0=property0Value_In_Global
