--- a/springFrameworkDebug/.classpath
+++ b/springFrameworkDebug/.classpath
@@ -13,6 +13,7 @@
 	<classpathentry kind="src" path="webDemoSrc"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-web/src/main/java"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-tx/src/main/java"/>
+	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-jms/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/aspectjweaver-1.8.10.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.2.jar"/>
@@ -38,7 +39,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-dataformat-xml-2.8.8.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-mapper-asl-1.9.13.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-module-jaxb-annotations-2.8.8.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/stax2-api-4.0.0.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/stax2-api-4.0.0.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/stax2-api-4.0.0-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/woodstox-core-asl-4.4.1.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jasperreports-6.3.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-beanutils-1.9.3.jar"/>
@@ -49,7 +50,10 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-tx-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mysql-connector-java-5.1.41-bin.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-jms-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-jms-4.3.6.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/activemq-all-5.10.0.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/activemq-all-5.10.0-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="lib" path="E:/Repository/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-messaging-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-messaging-4.3.6.RELEASE-sources.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
