--- a/HibernateORM4.3.8Debug/.classpath
+++ b/HibernateORM4.3.8Debug/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="demoSrc"/>
 	<classpathentry kind="src" path="hbmDemoSrc"/>
 	<classpathentry kind="src" path="jpaDemoSrc"/>
+	<classpathentry kind="src" path="rawDemoSrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/jpa/hibernate-entitymanager-4.3.8.Final.jar"/>
 	<classpathentry kind="lib" path="lib/required/antlr-2.7.7.jar"/>
