--- a/springFrameworkDebug/.classpath
+++ b/springFrameworkDebug/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="cn/java/debug/jdbc/|cn.java.debug.jdbc/" kind="src" path="src"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-beans/src/main/java"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-context-support/src/main/java"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-core/src/main/java"/>
@@ -14,6 +14,7 @@
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-web/src/main/java"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-tx/src/main/java"/>
 	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-jms/src/main/java"/>
+	<classpathentry kind="src" path="libSrc/spring-framework-4.3.6.RELEASE/spring-jdbc/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/aspectjweaver-1.8.10.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.2.jar"/>
@@ -53,8 +54,29 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-jms-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-jms-4.3.6.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/activemq-all-5.10.0.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/activemq-all-5.10.0-sources-1497531964274.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-data-redis-1.8.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-jdbc-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-jdbc-4.3.6.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/hsqldb.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/hsqldb-2.4.0-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/mybatis-spring-1.3.1.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/mybatis-spring-1.3.1-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-orm-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-orm-4.3.6.RELEASE-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-messaging-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-messaging-4.3.6.RELEASE-sources.jar"/>
-	<classpathentry kind="lib" path="D:/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-messaging-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-messaging-4.3.6.RELEASE-sources-1497620367168.jar"/>
+	<classpathentry kind="lib" path="E:/Repository/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
+	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/mybatis-3.4.1.jar"/>
+	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/lib/asm-5.0.4.jar"/>
+	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/lib/cglib-3.2.2.jar"/>
+	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/lib/ognl-3.1.8.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/hibernate-commons-annotations-4.0.5.Final.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/hibernate-core-4.3.8.Final.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jandex-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/optional/c3p0/c3p0-0.9.2.1.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/optional/c3p0/hibernate-c3p0-4.3.8.Final.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/optional/c3p0/mchange-commons-java-0.2.3.4.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
