--- a/springFrameworkDebug/.classpath
+++ b/springFrameworkDebug/.classpath
@@ -62,9 +62,10 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-oxm-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-oxm-4.3.6.RELEASE-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/kafka-clients-0.10.2.0.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-kafka-1.1.2.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-kafka-1.1.2.RELEASE-sources.jar"/>
+	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/fastjson-1.2.26.jar"/>
+	<classpathentry kind="lib" path="lib/spring-test-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-messaging-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-messaging-4.3.6.RELEASE-sources-1497620367168.jar"/>
-	<classpathentry kind="lib" path="E:/Repository/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
 	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/mybatis-3.4.1.jar"/>
 	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/lib/asm-5.0.4.jar"/>
 	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/lib/cglib-3.2.2.jar"/>
@@ -82,5 +83,6 @@
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="D:/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
