--- a/springFrameworkDebug/.classpath
+++ b/springFrameworkDebug/.classpath
@@ -83,6 +83,6 @@
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="D:/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
+	<classpathentry kind="lib" path="E:/Repository/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
