--- a/springFrameworkDebug/.classpath
+++ b/springFrameworkDebug/.classpath
@@ -24,9 +24,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-logging-1.2.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/freemarker.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/gson-2.7.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jfinal-1.9-bin-with-src.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/servlet-api.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/tomcat-servlet-api-8.5.4-sources.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-aop-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-aspects-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-beans-4.3.6.RELEASE.jar"/>
@@ -36,7 +34,6 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-web-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-webmvc-4.3.6.RELEASE.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/validation-api-1.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jetty-server-8.1.8.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-annotations-2.8.8.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-core-2.8.8.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/jackson-core-asl-1.9.13.jar"/>
@@ -73,6 +70,9 @@
 	<classpathentry kind="lib" path="lib/data_cassandra/spring-data-cassandra-1.5.1.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/data/spring-data-commons-1.13.4.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/data/spring-data-jpa-1.11.4.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/jetty_server/jetty-server-8.1.8.jar"/>
+	<classpathentry kind="lib" path="lib/jetty_server/jfinal-1.9-bin-with-src.jar"/>
+	<classpathentry kind="lib" path="lib/jetty_server/servlet-api.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/spring-messaging-4.3.6.RELEASE.jar" sourcepath="C:/Users/ADMINI~1/AppData/Local/Temp/decompiler/source/spring-messaging-4.3.6.RELEASE-sources-1497620367168.jar"/>
 	<classpathentry kind="lib" path="/MybatisDebug/lib/mybatis-3.4.1/mybatis-3.4.1.jar"/>
@@ -92,6 +92,6 @@
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-3.1.3.GA.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-logging-annotations-1.2.0.Beta1.jar"/>
 	<classpathentry kind="lib" path="/HibernateORM4.3.8Debug/lib/required/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="E:/Repository/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
+	<classpathentry kind="lib" path="D:/javacodedemo/springFrameworkDebug/WebRoot/WEB-INF/classes"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
