--- a/JavaBase/.classpath
+++ b/JavaBase/.classpath
@@ -54,5 +54,10 @@
 	<classpathentry kind="lib" path="lib/qrcode/japan/jmagick.jar"/>
 	<classpathentry kind="lib" path="lib/qrcode/japan/QRCode.jar"/>
 	<classpathentry kind="lib" path="lib/qrcode/japan/Qrcodeen.jar"/>
+	<classpathentry kind="lib" path="lib/http/httpasyncclient-4.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/http/httpclient-4.3.5.jar"/>
+	<classpathentry kind="lib" path="lib/http/httpcore-4.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/http/httpcore-nio-4.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/http/httpmime-4.3.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
